// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup Uncontrolled Radio Group snapshot 1`] = `
<DocumentFragment>
  <div
    class="styles__RadioGroupWrapper-sc-1p2keej-2 ctAeSj"
    data-orientation="horizontal"
    data-testid="radioGroupFruit"
    role="radiogroup"
  >
    <div
      class="styles__RadioOptionWrapper-sc-1p2keej-1 dffqrl"
      data-radio-position="left"
    >
      <input
        class="styles__InputRadio-sc-1p2keej-0 kfuxuU"
        id="radioOption_fruit_Apple"
        name="fruit"
        readonly=""
        type="radio"
        value="apple"
      />
      <label
        aria-disabled="false"
        class="style__LabelWrapper-sc-n7qfg8-0 gWTAqB"
        data-testid=""
        for="radioOption_fruit_Apple"
        id=""
      >
        <div
          class="style__LabelArea-sc-n7qfg8-3 llXBFs"
        >
          <span
            aria-disabled="false"
            class="style__LabelText-sc-n7qfg8-1 fmBzkl"
          >
            Apple
          </span>
        </div>
      </label>
    </div>
    <div
      class="styles__RadioOptionWrapper-sc-1p2keej-1 dffqrl"
      data-radio-position="left"
    >
      <input
        checked=""
        class="styles__InputRadio-sc-1p2keej-0 kfuxuU"
        id="radioOption_fruit_Orange"
        name="fruit"
        readonly=""
        type="radio"
        value="orange"
      />
      <label
        aria-disabled="false"
        class="style__LabelWrapper-sc-n7qfg8-0 gWTAqB"
        data-testid=""
        for="radioOption_fruit_Orange"
        id=""
      >
        <div
          class="style__LabelArea-sc-n7qfg8-3 llXBFs"
        >
          <span
            aria-disabled="false"
            class="style__LabelText-sc-n7qfg8-1 fmBzkl"
          >
            Orange
          </span>
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioGroup controlled Radio Group snapshot 1`] = `
<DocumentFragment>
  <div
    class="styles__RadioGroupWrapper-sc-1p2keej-2 ctAeSj"
    data-orientation="horizontal"
    data-testid="radioGroupVehicle"
    role="radiogroup"
  >
    <div
      class="styles__RadioOptionWrapper-sc-1p2keej-1 dffqrl"
      data-radio-position="left"
    >
      <input
        class="styles__InputRadio-sc-1p2keej-0 kfuxuU"
        id="radioOption_vehicle_Cycle"
        name="vehicle"
        readonly=""
        type="radio"
        value="cycle"
      />
      <label
        aria-disabled="false"
        class="style__LabelWrapper-sc-n7qfg8-0 gWTAqB"
        data-testid=""
        for="radioOption_vehicle_Cycle"
        id=""
      >
        <div
          class="style__LabelArea-sc-n7qfg8-3 llXBFs"
        >
          <span
            aria-disabled="false"
            class="style__LabelText-sc-n7qfg8-1 fmBzkl"
          >
            Cycle
          </span>
        </div>
      </label>
    </div>
    <div
      class="styles__RadioOptionWrapper-sc-1p2keej-1 dffqrl"
      data-radio-position="left"
    >
      <input
        checked=""
        class="styles__InputRadio-sc-1p2keej-0 kfuxuU"
        id="radioOption_vehicle_Bike"
        name="vehicle"
        readonly=""
        type="radio"
        value="bike"
      />
      <label
        aria-disabled="false"
        class="style__LabelWrapper-sc-n7qfg8-0 gWTAqB"
        data-testid=""
        for="radioOption_vehicle_Bike"
        id=""
      >
        <div
          class="style__LabelArea-sc-n7qfg8-3 llXBFs"
        >
          <span
            aria-disabled="false"
            class="style__LabelText-sc-n7qfg8-1 fmBzkl"
          >
            Bike
          </span>
        </div>
      </label>
    </div>
    <div
      class="styles__RadioOptionWrapper-sc-1p2keej-1 dffqrl"
      data-disabled="true"
      data-radio-position="left"
    >
      <input
        class="styles__InputRadio-sc-1p2keej-0 kfuxuU"
        disabled=""
        id="radioOption_vehicle_Car"
        name="vehicle"
        readonly=""
        type="radio"
        value="car"
      />
      <label
        aria-disabled="false"
        class="style__LabelWrapper-sc-n7qfg8-0 gWTAqB"
        data-testid=""
        for="radioOption_vehicle_Car"
        id=""
      >
        <div
          class="style__LabelArea-sc-n7qfg8-3 llXBFs"
        >
          <span
            aria-disabled="false"
            class="style__LabelText-sc-n7qfg8-1 fmBzkl"
          >
            Car
          </span>
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;
